<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211D44"
    tools:context=".MainActivity">
    
    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_height="350dp"
        android:src="@drawable/icget"
        android:scaleType="fitXY"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/healthy_on_you"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/img_splash"
        android:layout_centerInParent="true"
        android:fontFamily="@font/m_regular" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_of_happiness_is_not_a_life_for_money"
        android:textSize="20sp"
        android:textColor="@android:color/tertiary_text_light"
        android:layout_below="@+id/tv_judul"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/m_regular"
        android:textAlignment="center"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/tv_description"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/m_medium"
        android:background="@drawable/rounded_btn" />




</RelativeLayout>