<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211D44"
    tools:context=".StopwatchActivity">

    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="276dp"
        android:layout_height="247dp"
        android:src="@drawable/bgcircle"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/img_anchor"
        android:layout_width="358dp"
        android:layout_height="350dp"
        android:src="@drawable/icanchor"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image" />



    <Chronometer
        android:id="@+id/stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_anchor"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_go"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/stopwatch"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textSize="23sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/m_medium"
        android:background="@drawable/rounded_btn" />

    <Button

        android:id="@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/btn_go"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/finish_workout"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@android:color/widget_edittext_dark"
        android:fontFamily="@font/m_medium"
        android:background="@drawable/rounded_btn1" />




</RelativeLayout>